[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { git = "https://github.com/jcold/leptos0615.git", branch = "master", features = [
    "csr",
] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
wasm-tracing = "1.0.1"
leptos-use = { path = "/Users/dayu/Downloads/tmp/leptos-use", features = [

    "use_event_listener",

] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"

[patch."https://github.com/jcold/leptos0615.git"]
leptos = { path = "/Users/dayu/Downloads/tmp/leptos0615/leptos" }